Removed Db servlet, added Db init inside FrontController

--- a/pom.xml
+++ b/pom.xml
@@ -96,17 +96,21 @@
 				<configuration>
 					<url>http://95.85.35.169:8008/manager/text</url>
 					<server>digitalOcean</server>
-					<username></username>
-					<password></password>
 					<path>/WasSchema</path>
 					<update>true</update>
 				</configuration>
 			</plugin>
 		</plugins>
+
 	</build>
 
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+
+		<!-- I am getting a web.xml missing, this removes the error, I am using 
+			annotations instead of the web.xml -->
+		<failOnMissingWebXml>false</failOnMissingWebXml>
+
 	</properties>
 </project>
