--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,20 @@
 
 	<build>
 		<finalName>WasSchema</finalName>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<url>http://95.85.35.169:8008/manager/text</url>
+					<server>digitalOcean</server>
+					<path>/WasSchema</path>
+					<update>true</update>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 
 	<properties>
