--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 			<version>0.9.5.2</version>
 		</dependency>
 		<dependency>
+			<groupId>com.mchange</groupId>
+			<artifactId>mchange-commons-java</artifactId>
+			<version>0.2.11</version>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>6.0.3</version>
