--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,9 @@
 \.idea/
 *.iml
 
-# Other
+# Db properties
 src/main/resources/production.properties
+
+# Used for SQL generation
+/src/main/java/nl/parkhaven/wasschema/SQLQuery.java
+allHouseNumbersAbleToMakeAccount.txt
