--- a/cloud-functions/functions/package.json
+++ b/cloud-functions/functions/package.json
@@ -10,8 +10,9 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~5.10.0",
-    "firebase-functions": "^0.9.0"
+    "cors": "^2.8.4",
+    "firebase-admin": "^5.12.0",
+    "firebase-functions": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
