--- a/firebase-cloud-functions/functions/.eslintrc.json
+++ b/firebase-cloud-functions/functions/.eslintrc.json
@@ -56,7 +56,7 @@
     // Warn against unnecessary calls to .bind()
     "no-extra-bind": 1,
 
-    // Warn against unnecessary labels    
+    // Warn against unnecessary labels
     "no-extra-label": 1,
 
     // Disallow leading or trailing decimal points in numeric literals
@@ -111,11 +111,11 @@
     "prefer-arrow-callback": 1,
 
     // Return inside each then() to create readable and reusable Promise chains.
-    // Forces developers to return console logs and http calls in promises. 
+    // Forces developers to return console logs and http calls in promises.
     "promise/always-return": 2,
 
     //Enforces the use of catch() on un-returned promises
-    "promise/catch-or-return": 2,
+    "promise/catch-or-return": 1, // becasue I get weird Expected catch() or return exception
 
     // Warn against nested then() or catch() statements
     "promise/no-nesting": 1
