--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "^6.1.7",
     "@angular/compiler": "^6.1.7",
     "@angular/core": "^6.1.7",
+    "@angular/fire": "^5.0.0",
     "@angular/flex-layout": "^6.0.0-beta.18",
     "@angular/forms": "^6.1.7",
     "@angular/http": "^6.1.7",
@@ -26,9 +27,8 @@
     "@angular/pwa": "^0.8.1",
     "@angular/router": "^6.1.7",
     "@angular/service-worker": "^6.1.7",
-    "angularfire2": "^5.0.0-rc.12",
     "core-js": "^2.5.7",
-    "firebase": "^5.4.2",
+    "firebase": "^5.0.4",
     "ng2-simplemde": "^2.0.2",
     "rxjs": "^6.3.2",
     "zone.js": "^0.8.26"
@@ -49,7 +49,7 @@
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.4.0",
+    "protractor": "^5.4.1",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "^2.9.2"
