--- a/functions/functions/package.json
+++ b/functions/functions/package.json
@@ -2,7 +2,6 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "eslint .",
     "serve": "firebase serve --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
@@ -10,13 +9,8 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "cors": "^2.8.4",
-    "firebase-admin": "^6.0.0",
-    "firebase-functions": "^2.0.5"
-  },
-  "devDependencies": {
-    "eslint": "^4.12.0",
-    "eslint-plugin-promise": "^3.6.0"
+    "firebase-admin": "~6.0.0",
+    "firebase-functions": "^2.0.3"
   },
   "private": true
 }
