--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
     "core-js": "^2.5.7",
     "firebase": "^5.5.1",
     "ng2-simplemde": "^2.0.2",
-    "rxjs": "^6.3.2",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular-devkit/build-angular": "^0.8.3",
     "@angular/cli": "^6.2.3",
     "@angular/compiler-cli": "^6.1.8",
     "@angular/language-service": "^6.1.8",
