--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.8",
+    "@angular/animations": "^6.1.9",
     "@angular/cdk": "^6.4.7",
-    "@angular/common": "^6.1.8",
-    "@angular/compiler": "^6.1.8",
-    "@angular/core": "^6.1.8",
+    "@angular/common": "^6.1.9",
+    "@angular/compiler": "^6.1.9",
+    "@angular/core": "^6.1.9",
     "@angular/fire": "^5.0.2",
     "@angular/flex-layout": "^6.0.0-beta.18",
-    "@angular/forms": "^6.1.8",
-    "@angular/http": "^6.1.8",
+    "@angular/forms": "^6.1.9",
+    "@angular/http": "^6.1.9",
     "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.8",
-    "@angular/platform-browser-dynamic": "^6.1.8",
-    "@angular/router": "^6.1.8",
+    "@angular/platform-browser": "^6.1.9",
+    "@angular/platform-browser-dynamic": "^6.1.9",
+    "@angular/router": "^6.1.9",
     "core-js": "^2.5.7",
-    "firebase": "^5.5.1",
+    "firebase": "^5.5.2",
     "ng2-simplemde": "^2.0.2",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
@@ -35,10 +35,10 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.8.3",
     "@angular/cli": "^6.2.3",
-    "@angular/compiler-cli": "^6.1.8",
-    "@angular/language-service": "^6.1.8",
+    "@angular/compiler-cli": "^6.1.9",
+    "@angular/language-service": "^6.1.9",
     "@types/jasmine": "^2.8.8",
-    "@types/jasminewd2": "~2.0.2",
+    "@types/jasminewd2": "^2.0.4",
     "@types/node": "^6.0.117",
     "codelyzer": "^4.4.4",
     "jasmine-core": "~2.8.0",
