--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,11 @@
     "firebase-functions": "^2.0.5"
   },
   "devDependencies": {
-    "eslint": "^4.12.0",
-    "eslint-plugin-promise": "^3.6.0"
+    "eslint": "^6.8.0",
+    "eslint-plugin-promise": "^4.2.1"
+  },
+  "engines": {
+    "node": "12"
   },
   "private": true
 }
